--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </p>
 
             <p class="about-tag">
-                <a class="about-hyperlink" href="wilsonding.com"> About </a>
+                <a class="about-hyperlink" href="http://wilsonding.com"> About </a>
             </p>
             <br>
             <p class="projects-tag">
@@ -64,76 +64,58 @@
 
         <div class="main-bar">
 
-            <div class="about-me-container">
-                <p class="about-me-title">
-                    About Me
-                </p>
-
-                <div class="hr-style">
-                    <hr>
-                </div>
-
-                <p class="about-me-text">
-                    Hello, my name is Darren Li, a sophomore at Stony Brook University, where I am passionately
-                    pursuing a double major in computer science and applied mathematics. From a young age,
-                    the internet fascinated me, I remembered the stirring exhilaration with every
-                    encounter with new technology. As I surfed the internet with each mouse movement and keystroke,
-                    it had began my humble curiosisty at how these machines and applications work. This humble
-                    curiosity became a driving force that propelled me towards academia and beyond. Surfing the internet
-                    became more than just a pastime; it was an educational journey, laying the foundation for my
-                    academic pursuits.
-
-                </p>
-
-            </div>
-
             <div class="education-container">
-
-                <p class="education-title">
-                    Education
-                </p>
-
-                <div class="hr-style">
-                    <hr>
-                </div>
-
-                <div class="education-grid">
-                    <p class="relevant-text">
-                        Stony Brook University
+                    <p class="education-title">
+                        Education
                     </p>
 
-                    <p></p>
-                    <p class="degree-text">
-                        Bachelor of Applied Science - BASc, Computer Science
-                    </p>
+                    <div class="hr-style">
+                        <hr>
+                    </div>
 
-                    <p class="date">
-                        August 2022 - June 2026
-                    </p>
+                    <div class="education-grid">
+                        <p class="relevant-text">
+                            Stony Brook University
+                        </p>
 
-                    <p class="body-text">
-                        Relevant Coursework: Object Oriented Programming, Data Structures and Algorithms, Programming
-                        Abstractions,
-                        Systems Fundamental, Discrete Mathematics
-                    </p>
+                        <p class = "date">
+                            August 2022 - June 2026
+                        </p>
+                        <p class="degree-text">
+                            Bachelor of Applied Science - BASc, Computer Science
+                        </p>
 
-                    <p>
+                        <p>
+                        </p>
 
-                    </p>
-                    <p class="degree-text">
-                        Bachelor of Applied Science - BASc, Applied Mathematics & Statistics
-                    </p>
+                        <p class="body-text">
+                            Relevant Coursework: Object Oriented Programming, Data Structures and Algorithms,
+                            Programming
+                            Abstractions,
+                            Systems Fundamental, Discrete Mathematics
+                        </p>
 
-                    <p class="date">
-                        August 2022 - June 2026
-                    </p>
+                        <p>
 
-                    <p class="body-text">
-                        Relevant Coursework: Probability Theory, Linear Algebra, Combinatorics and Graph Theory,
-                        Survey of Probability & Statistics, Finite Mathematical Structures,
-                    </p>
+                        </p>
+                        <p class="degree-text">
+                            Bachelor of Applied Science - BASc, Applied Mathematics & Statistics
+                        </p>
 
-                </div>
+                        <p>
+                        </p>
+
+                        <p class="body-text">
+                            Relevant Coursework: Probability Theory, Linear Algebra, Combinatorics and Graph Theory,
+                            Survey of Probability & Statistics, Finite Mathematical Structures,
+                        </p>
+
+                        <p>
+                        </p>
+                        <hr class = "hr-bottom">
+                        <hr class = "hr-bottom">
+
+                    </div>
             </div>
 
             <div class="work-experience-container">
@@ -154,7 +136,7 @@
                         <span class="position-text"> Litter Ambassador</span>
                     </p>
 
-                    <p style="padding-top:10px; text-align:right; color:whitesmoke;">
+                    <p  class = "date">
                         August 2019 - July 2021
                     </p>
                     <p class="body-text">
@@ -175,11 +157,11 @@
                     <p class="relevant-text">
                         Center For Disease Control & Prevention
                         <br>
-                        <span class="position-text"> Field Lead</span>
+                        <span class="position-text">Field Lead</span>
                     </p>
 
-                    <p style="padding-top:10px; text-align:right; color:whitesmoke;">
-                        December 2021 - June 2022
+                    <p class = "date">
+                        January 2022 - June 2022
                     </p>
 
                     <p class="body-text">
@@ -204,7 +186,7 @@
                         <span class="position-text">Food and Beverage Manager</span>
                     </p>
 
-                    <p style="padding-top: 18px; text-align:right; color:whitesmoke;">
+                    <p class = "date">
                         <br>
                         May 2022 - August 2023
                     </p>
@@ -216,7 +198,9 @@
                         &#x2022;Trained newly employed workers in areas such as customer service, kitchen
                         responsibilities, and computer automated point of service system for payments.
                     </p>
-
+                    <p></p>
+                    <hr class = "hr-bottom">
+                    <hr class = "hr-bottom">
                 </div>
             </div>
 
@@ -238,7 +222,7 @@
                         <span class="position-text"> Team Member</span>
                     </p>
 
-                    <p style="padding-top:10px; text-align:right; color:whitesmoke;">
+                    <p class = "date">
                         January 2024 - Present
                     </p>
 
@@ -247,7 +231,9 @@
                         technologies
                         such as CSS, HTML, Javascript, React.js, and Node.js
                     </p>
-
+                    <p></p>
+                    <hr class = "hr-bottom">
+                    <hr class = "hr-bottom">
                 </div>
             </div>
 
